Bug 257060 - [WebGPU] [Style] Pass a WGPUPrimitiveDepthClipControl to WebGPU.framework whenever depth-clip-control is enabled
Summary: [WebGPU] [Style] Pass a WGPUPrimitiveDepthClipControl to WebGPU.framework whe...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Myles C. Maxfield
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-19 16:36 PDT by Myles C. Maxfield
Modified: 2023-05-21 12:51 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Myles C. Maxfield 2023-05-19 16:36:21 PDT
[WebGPU] [Style] Pass a WGPUPrimitiveDepthClipControl to WebGPU.framework whenever depth-clip-control is enabled
Comment 1 Radar WebKit Bug Importer 2023-05-19 16:36:39 PDT
<rdar://problem/109588317>
Comment 2 Myles C. Maxfield 2023-05-19 16:39:15 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14111
Comment 3 EWS 2023-05-21 12:51:12 PDT
Committed 264302@main (23ceeab826f9): <https://commits.webkit.org/264302@main>

Reviewed commits have been landed. Closing PR #14111 and removing active labels.