[WebGPU] [Style] Pass a WGPUPrimitiveDepthClipControl to WebGPU.framework whenever depth-clip-control is enabled https://bugs.webkit.org/show_bug.cgi?id=257060 rdar://109588317

Reviewed by Dan Glastonbury.

This patch doesn't actually change behavior; it's just a style change.

The depth-clip-control feature allows the author to specify a boolean that determines whether depth is unclipped.
Before this patch, we're only telling WebGPU.framework about the value of the boolean if it was set to true.
However, it's a little more faithful to tell WebGPU about the boolean, whatever its value, any time the depth-clip-
control feature is enabled.

* Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUDeviceImpl.cpp:
(PAL::WebGPU::convertToBacking):
(PAL::WebGPU::DeviceImpl::createRenderPipeline):
(PAL::WebGPU::DeviceImpl::createRenderPipelineAsync):

Canonical link: https://commits.webkit.org/264302@main